<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15sp"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Switch
                android:id="@+id/modeToggle"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_margin="15sp"
                android:text="@string/dark_mode"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/currentUserTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:textSize="20sp" />

            <Button
                android:id="@+id/logoutBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15sp"
                android:text="@string/logout" />

            <TextView
                android:id="@+id/contactDev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/contactDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/subjectView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/subjectLineHint"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/emailView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:ems="10"
                android:hint="@string/emailBodyHint"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/sendEmailBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sendBtn" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>